[tool.poetry]
name = "netviewer"
version = "0.1.0"
description = "iproute2 network information viewer"
authors = ["Simon Kennedy <sffjunkie+code@gmail.com>"]
license = "Apache-2.0"
readme = "ReadMe.md"

packages = [
    { include = "netviewer", from = "src" },
    { include = "netviewer/py.typed", from = "src" },
]

[tool.isort]
profile = "black"
lines_between_sections = 1

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.poetry.scripts]
netviewer = 'netviewer.__main__:run'

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"
tomli = "^2.0.1"
click = "^8.1.3"
PyYAML = "^6.0"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
